--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     "100046095326473"
   ],
   "nickNameBot": "💗𝘽𝙊𝙏 15 𝙇𝙀̣̂𝙉𝙃 𝙑𝙄𝙋🐳",
-  "prefix": "💗",
+  "prefix": ".",
   "database": {
     "type": "local",
     "uriMongodb": "",
